--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -81,7 +81,7 @@ Known side reactions to the oxidation of ammonia are first the recombination of 
 Reactions \ref{eq:AmmoniaOxidationNitrogen}, \ref{eq:AmmoniaOxidationNitrousOxide}, \ref{eq:AmmoniaOxidationNitricOxide} and \ref{eq:SideReactions1} are strongly exothermic, leading to a significant increase of the catalyst temperature during the reaction \parencite{Hatscher2008}.
 
 
-\subsection{The importance of heterogeneous catalysis}
+\subsection{The importance of heterogeneous catalysis}\label{sec:AmoOxiHC}
 
 The second (eq. \ref{eq:Stage2}) and third (eq. \ref{eq:Stage3}) stages of the Ostwald process stem from the production of \nitricoxide \textit{via} the first stage, \textit{i.e.} the oxidation of ammonia (eq. \ref{eq:AmmoniaOxidationNitricOxide}).
 
