--- a/main.tex
+++ b/main.tex
@@ -220,7 +220,7 @@
 
 \mainmatter
 % Introduction
-    \chapter{Introduction} 
+    \chapter{Introduction}
     \input{Sections/1_Introduction/AmmoniaOxidation}
      
 % Theory
@@ -232,17 +232,18 @@
     \input{Sections/2_Theory_Models/SixS}
     \input{Sections/2_Theory_Models/ComputerPrograms}
     
-% Results
-    \chapter{Results}
-    \input{Sections/3_Results/BCDI}
-    \section{Near-ambient pressure single crystal surface study during the oxidation of ammonia}
-    \input{Sections/3_Results/111}
-    \input{Sections/3_Results/100}
-    \input{Sections/3_Results/EmpiricalAnalysis}
-    
+% Results BCDI
+    \chapter{Bragg coherent diffraction imaging study of Pt nanoparticles during the oxidation of ammonia}
+    \input{Sections/3_Results_BCDI/BCDI}
+
+% Results SXRD
+    \chapter{Structural and chemical evolution of single Pt facets during the oxidation of ammonia}
+    \input{Sections/4_Results_SXRD/111}
+    \input{Sections/4_Results_SXRD/100}
+
 % Conclusion
 %     \chapter{Conclusion}
-%     \input{Sections/4_Conclusion/Conclusion}
+%     \input{Sections/5_Conclusion/Conclusion}
     
 % % Bibliography
     \phantomsection
@@ -250,8 +251,8 @@
 
 % Appendices
     \appendix
-    \chapter{3D BCDI \textit{operando} measurements}
-    \input{Sections/5_Appendix/OperandoBCDI}
+    % \chapter{3D BCDI \textit{operando} measurements}
+    % \input{Sections/6_Appendix/OperandoBCDI}
 
 
 
