--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,33 @@ volume = {90},
 year = {2002}
 }
 
+@article{Kiessig1931,
+author = {Kiessig, Heinz},
+title = {Interferenz von Röntgenstrahlen an dünnen Schichten},
+journal = {Annalen der Physik},
+volume = {402},
+number = {7},
+pages = {769-788},
+doi = {https://doi.org/10.1002/andp.19314020702},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/andp.19314020702},
+year = {1931}
+}
+
+@article{Gupta1981,
+  title = {Lattice relaxation at a metal surface},
+  author = {Gupta, Raju P.},
+  journal = {Phys. Rev. B},
+  volume = {23},
+  issue = {12},
+  pages = {6265--6270},
+  numpages = {0},
+  year = {1981},
+  month = {06},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.23.6265},
+  url = {https://link.aps.org/doi/10.1103/PhysRevB.23.6265}
+}
+
 @Article{Anstine2023,
 author={Anstine, Dylan M.
 and Isayev, Olexandr},
@@ -51,7 +78,6 @@ doi={10.1002/andp.19053220607},
    year = {2022},
 }
 
-
 @article{Vlieg1997,
    abstract = {The geometrical and resolution corrections are derived that occur in the measurement of the integrated intensities of surface diffraction rods for the case of a six-circle diffractometer. Since the six-circle geometry entails as special cases the five-circle and the z-axis diffractometers, the results are valid for these geometries as well. The derivations are valid for any incoming or outgoing angle of the X-ray beam, and are particularly important for measurements at large perpendicular momentum transfer. Expressions are derived for the integrated intensity from rocking scans, from stationary measurements and from reflectivity data. With all correction factors known, it is possible to derive the structure factors with a common scale factor from all these types of scans. It is expected that area detectors combined with stationary measurements will find widespread use in the surface X-ray diffraction community.},
    author = {Elias Vlieg},
@@ -65,6 +91,125 @@ doi={10.1002/andp.19053220607},
    title = {Integrated Intensities Using a Six-Circle Surface X-ray Diffractometer},
    volume = {30},
    year = {1997},
+}
+
+@inbook{moritz_van_hove_2022,
+   place={Cambridge},
+   title={Surface X-ray Diffraction},
+   DOI={10.1017/9781108284578.009},
+   booktitle={Surface Structure Determination by LEED and X-rays},
+   publisher={Cambridge University Press},
+   author={Moritz, Wolfgang and Van Hove, Michel A.},
+   year={2022},
+   pages={285–361}
+}
+
+@article{Zhdanov1997,
+  title = {Effect of adsorption on surface roughening},
+  author = {Zhdanov, V. P. and Kasemo, B.},
+  journal = {Phys. Rev. B},
+  volume = {56},
+  issue = {16},
+  pages = {R10067--R10070},
+  numpages = {0},
+  year = {1997},
+  month = {10},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevB.56.R10067},
+}
+
+@article{Zhdanov1998,
+    author = {Zhdanov, V. P. and Kasemo, B.},
+    title = "{Surface roughening: Kinetics, adsorbate-induced effects, and manifestation in catalytic reactions}",
+    journal = {The Journal of Chemical Physics},
+    volume = {108},
+    number = {11},
+    pages = {4582-4590},
+    year = {1998},
+    month = {03},
+    abstract = "{Using the Monte Carlo (MC) technique, we have analyzed the kinetics of roughening of a clean surface at T\\&gt;TR (TR is the roughening temperature), the kinetics of relaxation from a roughened to a flat surface at T\\&lt;TR, the effect of adsorption on surface roughening, and the influence of adsorbate-induced roughening on the kinetics of the catalytic 2A+B2→2AB reaction. (i) For a clean surface, the results were obtained by employing the standard restricted-solid-on-solid (RSOS) model with surface diffusion occurring via jumps to nearest-neighbor and next-nearest-neighbor sites. The kinetics of surface roughening at T\\&gt;TR and of surface relaxation at T\\&lt;TR are found to be logarithmic in time. In particular, the mean-square height difference at T\\&gt;TR increases with time as w2∝ln t. (ii) Complementing the RSOS model by terms describing adsorption, we demonstrate that adsorbate-induced surface roughening may occur with significant lowering of TR, due, respectively, to indirect next-nearest-neighbor adsorbate–substrate repulsion, attractive nearest- neighbor adsorbate–substrate lateral interaction, and/or repulsive adsorbate-adsorbate lateral interaction. In all these cases, the ratio of TRnear adsorbate saturation and for the clean surface, respectively, is given by an analytical expression that is a simple combination of the corresponding interactions. The coverage dependence of TR in MC simulations is nonlinear and slightly different compared to the mean-field-type prediction. (iii) The effect of adsorbate-induced roughening on a catalytic reaction can be dramatic even at weak roughening, with qualitative and quantitative changes in the kinetics. For example, the absolute conversion rate at maximum rate, and the reactant mixture corresponding to this maximum can be very different on the flat and roughened surface. The behavior of the adsorbate coverages near the points corresponding to the kinetic phase transitions can change character qualitatively.}",
+    issn = {0021-9606},
+    doi = {10.1063/1.476504},
+}
+
+@article{MUSKET1982143,
+title = {Preparation of atomically clean surfaces of selected elements: A review},
+journal = {Applications of Surface Science},
+volume = {10},
+number = {2},
+pages = {143-207},
+year = {1982},
+issn = {0378-5963},
+doi = {https://doi.org/10.1016/0378-5963(82)90142-8},
+author = {R.G. Musket and W. McLean and C.A. Colmenares and D.M. Makowiecki and W.J. Siekhaus},
+abstract = {Surface cleaning procedures for seventy four of the elements having vapor pressures below 1.3 × 10−7 Pa at room temperature have been reviewed and evaluated. The emphasis was on in-situ procedures used to produce a clean surface on a macroscopic bulk sample in an ultra-high vacuum environment. In this review an atomically clean surface was defined to be an annealed surface (except where noted) at ambient temperature with a total surface contamination level of less than a few percent of a monolater. Wherever possible only cleaning methods documented by element- specific, surface-analytical techniques were reviewed and subsequently incorporated into the table of recommended procedures. For some elements a variety of procedures was deemed acceptable. Any differences in methods for polycrystalline and single-crystalline surfaces of the same element have been detailed. References to the reviewed literature are grouped by element.}
+}
+
+@Article{Taglauer1990,
+author={Taglauer, E.},
+title={Surface cleaning using sputtering},
+journal={Applied Physics A},
+year={1990},
+month={09},
+day={01},
+volume={51},
+number={3},
+pages={238-251},
+abstract={In this article sputtering phenomena as related to the removal of contaminant layers from surfaces are reviewed. Basic relations for sputtering of adsorbed layers by ion bombardment and the corresponding cross sections are discussed in the introductory part. The following section presents models for the sputtering of overlayers with the intention of understanding the relevant physical processes and to obtain quantitative estimates. Subsequently, undesirable by-products of ion bombardment, such as surface damage, particle implantation and preferential sputtering are considered. A concise experimental section deals with ion beam and glow discharge techniques applied for surface cleaning as well as with some surface analytical methods (Auger electron spectroscopy, low-energy ion scattering, secondary ion mass spectroscopy) which are useful and necessary to check the obtained cleaning effect. In the final section various examples are given and some conclusions are drawn for the efficiency of surface cleaning by sputtering.},
+issn={1432-0630},
+doi={10.1007/BF00324008},
+}
+
+@book{RaschkaMirjalili2019,
+address = {Birmingham, UK},
+author = {Raschka, Sebastian and Mirjalili, Vahid},
+edition = {3},
+isbn = {978-1789955750},
+publisher = {Packt Publishing},
+title = {{Python Machine Learning, 3rd Ed.}},
+year = {2019}
+}
+
+@incollection{MCALISTER2003629,
+title = {Speckle Interferometry},
+editor = {Robert A. Meyers},
+booktitle = {Encyclopedia of Physical Science and Technology (Third Edition)},
+publisher = {Academic Press},
+edition = {Third Edition},
+address = {New York},
+pages = {629-636},
+year = {2003},
+isbn = {978-0-12-227410-7},
+doi = {https://doi.org/10.1016/B0-12-227410-5/00719-5},
+url = {https://www.sciencedirect.com/science/article/pii/B0122274105007195},
+author = {Harold A. McAlister}
+}
+
+@article{Wood1964,
+    author = {Wood, Elizabeth A.},
+    title = "{Vocabulary of Surface Crystallography}",
+    journal = {Journal of Applied Physics},
+    volume = {35},
+    number = {4},
+    pages = {1306-1312},
+    year = {1964},
+    month = {07},
+    abstract = "{The recent increase of activity in the field of slow‐electron diffraction has resulted in a need for agreement on conventions of terminology in the description of a diperiodic surface structure relative to a triperiodic substrate. Vector description of the surface structure net in terms of the substrate surface net is suggested. Fractional Miller indices result when the surface structure mesh is larger than the substrate surface mesh. The surface structure may be either that of a deposit or that of the selvedge of the substrate.With the relaxation of one of the diffraction conditions in the diperiodic structure the reciprocal lattice becomes a set of parallel rods intersecting the Ewald sphere continuously with change of wavelength of the incident radiation or change of orientation of the crystal.The paper discusses the applicability of the seventeen two‐dimensional space groups and the eighty diperiodic groups in three dimensions to these diperiodic structures. A comparison is made between the different effects of surface symmetry on etch pits and epitaxial deposits on the cleavage face of muscovite.}",
+    issn = {0021-8979},
+    doi = {10.1063/1.1713610},
+}
+
+@article{FEIDENHANSL1989105,
+title = {Surface structure determination by X-ray diffraction},
+journal = {Surface Science Reports},
+volume = {10},
+number = {3},
+pages = {105-188},
+year = {1989},
+issn = {0167-5729},
+url = {https://www.sciencedirect.com/science/article/pii/0167572989900022},
+author = {R. Feidenhans'l},
+abstract = {X-ray diffraction has become an important tool for studying surfaces. We review the basic principles, the necessary instrumentation and show examples of successful structure determinations. Both the analysis of fractional-order reflections as well as the analysis of integer-order reflections, the crystal truncation rods, are discussed. The emphasis is put on the semiconductor (111) surfaces, which have been studied intensively.}
 }
 
 @article{Drnec2014,
@@ -591,6 +736,29 @@ pages = {12914--12919},
 title = {{Ammonia selective oxidation on Pt(100) sites in an alkaline medium}},
 volume = {109},
 year = {2003}
+}
+
+@online{JupyterNotebook7,
+  title = {Jupyter Notebook 7},
+  year = 2023,
+  url = {https://blog.jupyter.org/announcing-jupyter-notebook-7-8d6d66126dcf},
+  urldate = {2023-08-17},
+}
+
+@online{ThermalConductivityOfGases,
+  title = {Thermal conductivity of gases},
+  author = {Huber M. L., Harvey . H.},
+  year = 2023,
+  publisher = {National Institute of Standards and Technology},
+  url = {https://tsapps.nist.gov/publication/get_pdf.cfm?pub_id=907540},
+  urldate = {2023-08-20},
+}
+
+@online{Diadem,
+  title = {Dispositifs Intégrés pour l’Accélération du DEploiement de Matériaux Emergents},
+  year = 2023,
+  url = {https://anr.fr/fr/france-2030/france2030/call/pepr-diadem-appel-a-projets-dispositifs-integres-pour-lacceleration-du-deploiement-de-materiaux/},
+  urldate = {2023-08-17},
 }
 
 @online{Thermofischer,
@@ -1185,10 +1353,8 @@ year = {2005}
 }
 @article{Dupraz2017,
 abstract = {Structural quality and stability of nanocrystals are fundamental problems that bear important consequences for the performances of small-scale devices. Indeed, at the nanoscale, their functional properties are largely influenced by elastic strain and depend critically on the presence of crystal defects. It is thus of prime importance to be able to monitor, by noninvasive means, the stability of the microstructure of nano-objects against external stimuli such as mechanical load. Here we demonstrate the potential of Bragg coherent diffraction imaging for such measurements, by imaging in 3D the evolution of the microstructure of a nanocrystal exposed to in situ mechanical loading. Not only could we observe the evolution of the internal strain field after successive loadings, but we also evidenced a transient microstructure hosting a stable dislocation loop. The latter is fully characterized from its characteristic displacement field. The mechanical behavior of this small crystal is clearly at odds with what happens in bulk materials where many dislocations interact. Moreover, this original in situ experiment opens interesting possibilities for the investigation of plastic deformation at the nanoscale.},
-annote = {Dupraz, M., et al (2017). Nano Letters, 17(11), 6696–6701.},
 author = {Dupraz, M. and Beutier, G. and Cornelius, T. W. and Parry, G. and Ren, Z. and Labat, S. and Richard, M. I. and Chahine, G. A. and Kovalenko, O. and {De Boissieu}, M. and Rabkin, E. and Verdier, M. and Thomas, O.},
 doi = {10.1021/acs.nanolett.7b02680},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Dupraz et al. - 2017 - 3D Imaging of a Dislocation Loop at the Onset of Plasticity in an Indented Nanocrystal.pdf:pdf},
 issn = {15306992},
 journal = {Nano Letters},
 keywords = {Nanocrystal,coherent diffraction imaging,dislocations,nanoindentation},
@@ -1439,7 +1605,6 @@ year = {2019}
 abstract = {In this paper, we analyze a machine-learning-based non-iterative phase retrieval method. Phase retrieval and its applications have been attractive research topics in optics and photonics, for example, in biomedical imaging, astronomical imaging, and so on. Most conventional phase retrieval methods have used iterative processes to recover phase information; however, the calculation speed and convergence with these methods are serious issues in real-time monitoring applications. Machine-learning-based methods are promising for addressing these issues. Here, we numerically compare conventional methods and a machine-learning-based method in which a convolutional neural network is employed. Simulations with several conditions show that the machine-learning-based method realizes fast and robust phase recovery compared with the conventional methods. We also numerically demonstrate machine-learning-based phase retrieval from noisy measurements with a noisy training data set for improving the noise robustness. The machine-learning-based approach used in this study may increase the impact of phase retrieval, which is useful in various fields, where phase retrieval has been used as a fundamental tool.},
 author = {Nishizaki, Yohei and Horisaki, Ryoichi and Kitaguchi, Katsuhisa and Saito, Mamoru and Tanida, Jun},
 doi = {10.1007/s10043-019-00574-8},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Nishizaki et al. - 2020 - Analysis of non-iterative phase retrieval based on machine learning.pdf:pdf},
 isbn = {0123456789},
 issn = {13499432},
 journal = {Optical Review},
@@ -1451,6 +1616,32 @@ title = {{Analysis of non-iterative phase retrieval based on machine learning}},
 volume = {27},
 year = {2020}
 }
+
+@Article{Lim2021,
+author={Lim, Bruce
+and Bellec, Ewen
+and Dupraz, Maxime
+and Leake, Steven
+and Resta, Andrea
+and Coati, Alessandro
+and Sprung, Michael
+and Almog, Ehud
+and Rabkin, Eugen
+and Schulli, Tobias
+and Richard, Marie-Ingrid},
+title={A convolutional neural network for defect classification in Bragg coherent X-ray diffraction},
+journal={npj Computational Materials},
+year={2021},
+month={07},
+day={21},
+volume={7},
+number={1},
+pages={115},
+abstract={Coherent diffraction imaging enables the imaging of individual defects, such as dislocations or stacking faults, in materials. These defects and their surrounding elastic strain fields have a critical influence on the macroscopic properties and functionality of materials. However, their identification in Bragg coherent diffraction imaging remains a challenge and requires significant data mining. The ability to identify defects from the diffraction pattern alone would be a significant advantage when targeting specific defect types and accelerates experiment design and execution. Here, we exploit a computational tool based on a three-dimensional (3D) parametric atomistic model and a convolutional neural network to predict dislocations in a crystal from its 3D coherent diffraction pattern. Simulated diffraction patterns from several thousands of relaxed atomistic configurations of nanocrystals are used to train the neural network and to predict the presence or absence of dislocations as well as their type (screw or edge). Our study paves the way for defect-recognition in 3D coherent diffraction patterns for material science.},
+issn={2057-3960},
+doi={10.1038/s41524-021-00583-9},
+}
+
 
 @article{Yao2021,
 abstract = {Ptychography is a rapidly developing scanning microscopy which is able to view the internal structures of samples at a high resolution beyond the illumination size. The achieved spatial resolution is theoretically dose-limited. A broadband source can provide much higher flux compared with a monochromatic source; however, it conflicts with the necessary coherence requirements of this coherent diffraction imaging technique. In this paper, a multi-wavelength reconstruction algorithm has been developed to deal with the broad bandwidth in ptychography. Compared with the latest development of mixed-state reconstruction approach, this multi-wavelength approach is more accurate in the physical model, and also considers the spot size variation as a function of energy due to the chromatic focusing optics. Therefore, this method has been proved in both simulation and experiment to significantly improve the reconstruction when the source bandwidth, illumination size and scan step size increase. It is worth mentioning that the accurate and detailed information of the energy spectrum for the incident beam is not required in advance for the proposed method. Further, we combine multi-wavelength and mixed-state approaches to jointly solve temporal and spatial partial coherence in ptychography so that it can handle various disadvantageous experimental effects. The significant relaxation in coherence requirements by our approaches allows the use of high-flux broadband X-ray sources for high-efficient and high-resolution ptychographic imaging.},
@@ -1787,6 +1978,7 @@ title = {{Coherent diffraction patterns of individual dislocation strain fields}
 volume = {38},
 year = {2005}
 }
+
 @article{Ulvestad2017,
 abstract = {Crystallographic defects such as dislocations can significantly alter material properties and functionality. However, imaging these imperfections during operation remains challenging due to the short length scales involved and the reactive environments of interest. Bragg coherent diffractive imaging (BCDI) has emerged as a powerful tool capable of identifying dislocations, twin domains, and other defects in 3D detail with nanometer spatial resolution within nanocrystals and grains in reactive environments. However, BCDI relies on phase retrieval algorithms that can fail to accurately reconstruct the defect network. Here, we use numerical simulations to explore different guided phase retrieval algorithms for imaging defective crystals using BCDI. We explore different defect types, defect densities, Bragg peaks, and guided algorithm fitness metrics as a function of signal-to-noise ratio. Based on these results, we offer a general prescription for phasing of defective crystals with no a priori knowledge.},
 author = {Ulvestad, A. and Nashed, Y. and Beutier, G. and Verdier, M. and Hruszkewycz, S. O. and Dupraz, M.},
@@ -1802,6 +1994,7 @@ title = {{Identifying Defects with Guided Algorithms in Bragg Coherent Diffracti
 volume = {7},
 year = {2017}
 }
+
 @article{Lee2022,
 author = {Lee, Juhyeok and Jeong, Chaehwa and Lee, Taegu and Ryu, Seunghwa and Yang, Yongsoo},
 doi = {10.1021/acs.nanolett.1c03773},
@@ -2172,20 +2365,10 @@ year = {2020}
 }
 @article{Lozano-Reis2020,
 abstract = {The molecular mechanism of CO2 hydrogenation on a Ni(111) surface has been thoroughly investigated by means of periodic density functional theory calculations, including dispersion interactions, along with accurate kinetic Monte Carlo simulations, including lateral interactions between the adsorbates. The present reaction model involves 25 different species and a total of 86 elementary processes, including adsorptions, desorptions, surface chemical steps, and diffusions. The reaction network accounts for three different mechanisms for the reverse water-gas shift reaction and three different mechanisms for methanation. The kinetic Monte Carlo simulations reveal that the reverse water-gas shift reaction dominates the CO2 hydrogenation on Ni(111) with no evidence of methane formation. The reaction proceeds mainly through the redox route, with the carboxyl pathway also being active but to a lesser extent. Methane production is hindered by the H + CO → HCO endothermicity and the prohibitive energy barrier for CO dissociation, implying CO desorption rather than evolution through the Sabatier reaction. A detailed comparison to earlier theoretical studies supporting the methanation reaction shows that some unreliable assumptions along with limited theoretical approaches biased the former conclusion.},
-annote = {Sabatier : 
-It involves the reaction of hydrogen with carbon dioxide at elevated temperatures and pressures in the presence of a nickel catalyst to produce methane and water.
-
-Formaldehyde (CH2O) is produced industrially by the catalytic oxidation of methanol (CH3OH), produced by CO hydrogenation
-
-Methanol is a promising energy carrier because, as a liquid, it is easier to store than hydrogen and natural gas. ready biodegradability and low toxicity.
-
-The water-gas shift reaction (WGSR) describes the reaction of carbon monoxide and water vapor to form carbon dioxide and hydrogen:},
 author = {Lozano-Reis, Pablo and Prats, H{\`{e}}ctor and Gamallo, Pablo and Illas, Francesc and Say{\'{o}}s, Ram{\'{o}}n},
 doi = {10.1021/acscatal.0c01599},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lozano-Reis et al. - 2020 - Multiscale Study of the Mechanism of Catalytic CO2Hydrogenation Role of the Ni(111) Facets.pdf:pdf},
 issn = {21555435},
 journal = {ACS Catalysis},
-keywords = {Sabatier reaction,catalytic activity,density functional theory,kinetic Monte Carlo,nickel (111),reverse water-gas shift reaction},
 number = {15},
 pages = {8077--8089},
 title = {{Multiscale Study of the Mechanism of Catalytic CO2Hydrogenation: Role of the Ni(111) Facets}},
@@ -2213,7 +2396,6 @@ year = {2015}
 abstract = {In the search for precious-metal-free electrode materials for electrochemical water splitting, transition-metal oxides have been receiving much recent interest as active and stable electrocatalysts for the anodic oxygen evolution reaction (OER). We present operando surface X-ray diffraction studies of two structurally well-defined epitaxial cobalt oxide thin films: Co3O4(111) and CoOOH(001) electrodeposited on Au(111). The potential-dependent structural changes during cyclic voltammograms were monitored with high time resolution up to OER current densities as high as 150 mA cm-2. The CoOOH(001) film is found to be smooth and perfectly stable over a wide potential range. In the case of Co3O4(111), fast and fully reversible structural changes are observed. Specifically, the surface region of Co3O4(111) starts restructuring at potentials 300 mV negative of the onset of the OER, indicating that the process is related to the thermodynamically predicted Co3O4/CoOOH(001) transition rather than to the catalytic reaction. The formed skin layer is of defined thickness, which changes linearly with applied potential, and is the OER active phase. Surprisingly, the catalytic activity of the skin layer covered Co3O4 film and that of the smooth CoOOH(001) are almost identical, if the true microscopic surface area is taken into account. This indicates that the number of OER active sites on the two oxides is similar, despite the very different defect density, and is at variance with previous suggestions that di-$\mu$-oxo bridged Co cations are exclusively responsible for the OER activity of Co oxides. For the smooth CoOOH(001), a turnover frequency of 4.2 s-1 per surface atom is determined at an overpotential of 400 mV. Furthermore, our studies demonstrate that the pseudocapacitive charging current in the pre-OER potential range must be assigned to a bulk process that is accompanied by potential-dependent changes of the unit cell volume in the Co3O4 bulk.},
 author = {Reikowski, Finn and Maroun, Fouad and Pacheco, Ivan and Wiegmann, Tim and Allongue, Philippe and Stettner, Jochim and Magnussen, Olaf M.},
 doi = {10.1021/acscatal.8b04823},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Reikowski et al. - 2019 - Operando Surface X-ray Diffraction Studies of Structurally Defined Co3O4 and CoOOH Thin Films during Oxygen Ev.pdf:pdf},
 issn = {21555435},
 journal = {ACS Catalysis},
 keywords = {Co3O4,CoOOH,electrocatalysts,operando studies,oxygen evolution reaction,surface X-ray diffraction},
@@ -2223,6 +2405,7 @@ title = {{Operando Surface X-ray Diffraction Studies of Structurally Defined Co3
 volume = {9},
 year = {2019}
 }
+
 @article{Ozturk2017,
 abstract = {In this study, we present a numerical framework for modeling three-dimensional (3D) diffraction data in Bragg coherent diffraction imaging (Bragg CDI) experiments and evaluating the quality of obtained 3D complex-valued real-space images recovered by reconstruction algorithms under controlled conditions. The approach is used to systematically explore the performance and the detection limit of this phase-retrieval-based microscopy tool. The numerical investigation suggests that the superb performance of Bragg CDI is achieved with an oversampling ratio above 30 and a detection dynamic range above 6 orders. The observed performance degradation subject to the data binning processes is also studied. This numerical tool can be used to optimize experimental parameters and has the potential to significantly improve the throughput of Bragg CDI method.},
 author = {Ozt{\"{u}}rk, H. and Huang, X. and Yan, H. and Robinson, I. K. and Noyan, I. C. and Chu, Y. S.},
@@ -2645,6 +2828,47 @@ keywords = {Heterogeneous catalysis, History, Industrial realisations, Future, C
 abstract = {This review highlights key catalytic discoveries and the main industrial catalytic processes over the last 300 years that involved commodities, fine chemicals, petrochemicals, petroleum transformation for fuels and energy supply, emission control, and so forth. In the past, discoveries have often followed events such as wars or embargos, whereas the current driving forces of studies, researches and then discoveries aim at a better understanding of catalytic processes, at reducing the costs of raw materials and processes, at developing new catalytic materials and at addressing environmental issues. This review focuses on the history of many catalytic industrial processes, environmental issues, catalytic materials, especially their expected catalytic properties, on catalyst characterisation by physical methods and development of in situ conditions, i.e., characterisation under actual working conditions with reactants and products analyzed on-line. Emphasis is also placed on high selectivity in catalytic reactions and the major challenges for the future, such as environmental issues, energy supply, pollution control for vehicles and industrial plants, air/VOCs/water purification, hydrogen sources and carbon dioxide storage/up grading, transformation of biomass as a promising source of raw materials, and catalytic water splitting perspectives. This review is a survey of heterogeneous catalysis and is not comprehensive but leads to the conclusion that, although many catalysts and catalytic processes have already been discovered and developed over the past century, many opportunities nevertheless exist for new developments, new processes and new catalytic materials. It follows that substantial challenges exist for the younger generation of researchers and engineers, as emphasized at the end of the manuscript.}
 }
 
+@article{Haydock1972,
+  title = {Electronic Density of States at Transition-Metal Surfaces},
+  author = {Haydock, R. and Heine, Volker and Kelly, M. J. and Pendry, J. B.},
+  journal = {Phys. Rev. Lett.},
+  volume = {29},
+  issue = {13},
+  pages = {868--871},
+  numpages = {0},
+  year = {1972},
+  month = {09},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.29.868},
+}
+
+
+@article{DESJONQUERES1975,
+title = {Electronic surface states in cleaved transition metals},
+journal = {Surface Science},
+volume = {53},
+number = {1},
+pages = {429-442},
+year = {1975},
+issn = {0039-6028},
+doi = {https://doi.org/10.1016/0039-6028(75)90142-9},
+author = {M.C. Desjonquères and F. Cyrot-Lackmann},
+abstract = {The local densities of states (LDS) on clean low-index surfaces of fcc Ni and bcc Fe are presented. They are calculated within the tight-binding approximation using a moment method and a continued fraction analysis. The d band degeneracy and the charge rearrangement occurring near the surface when cleaving the crystal are fully taken into account by computing exactly a large number of moments (22–26). The surface LDS are found to be strongly dependent on the cleavage plane. Indeed, whereas the LDS on dense planes are rather bulk like, sharp peaks arising from states localized near the surface are obtained near the atomic level of the metal on non-dense planes of cleavage. In addition, the bandwidth is broadened by surface states for Ni. On the contrary, for bcc Fe the surface potential is not strong enough to modify the bandwidth. A comparison is made with spectroscopic observations. The method lends itself to other interesting applications in the surface physics field and, as an example, we present the results of calculations of the spatial distribution of the electronic charge near the surface and its deviation from spherical symmetry. The charge asphericity is slightly increased when going from a bulk to a surface site as the difference between the occupations of two surface orbitals can reach 0.34 ē instead of 0.15 −c for a bulk site. Diagrams are shown for (100) and (110) cleaved Ni to illustrate the results. The consequences upon preferred adsorption sites according to the electronic affinity and size of the adsorbate are discussed.}
+}
+
+@article{EGELHOFF1987,
+title = {Core-level binding-energy shifts at surfaces and in solids},
+journal = {Surface Science Reports},
+volume = {6},
+number = {6},
+pages = {253-415},
+year = {1987},
+issn = {0167-5729},
+doi = {https://doi.org/10.1016/0167-5729(87)90007-0},
+author = {W.F. Egelhoff},
+abstract = {This review presents an overview of the theory and of various successful approaches to the interpretation of core-level binding-energy shifts observed in photoelectron spectroscopy. The review concentrates specifically on shifts since most of the chemical and physical insights provided by core levels are derived not from the core-level binding energies themselves but from shifts they exhibit. The theoretical background is presented at a level readily accessible to the general reader. Particular attention is paid to relative merits of the two basically different conceptual frameworks for interpreting core-level binding-energy shifts, the initial-state-final-state approach and the equivalent-core approach.}
+}
+
 @book{NielsenMcMorrow,
 title = {Elements of Modern X‐ray Physics},
 author = {Jens Als-Nielsen, Des McMorrow},
@@ -2652,6 +2876,15 @@ year = {2011},
 publisher = {John Wiley \& Sons, Ltd},
 doi = {10.1002/9781119998365},
 }
+
+@book{Ashcroft76,
+  author = {Ashcroft, N. W. and Mermin, N. D.},
+  publisher = {Saunders College Publishing},
+  title = {Solid State Physics},
+  year = 1976
+}
+
+
 
 @book{Hagen2016,
 title = {Industrial Catalysis: A Practical Approach},
@@ -3210,7 +3443,6 @@ year = {2022}
 
 @article{Dawiec_2016,
 doi = {10.1088/1748-0221/11/12/P12018},
-url = {https://dx.doi.org/10.1088/1748-0221/11/12/P12018},
 year = {2016},
 month = {12},
 publisher = {},
@@ -3238,11 +3470,9 @@ abstract  =""}
 
 
 @article{Li2020,
-abstract = {We explore the use of continuous scanning during data acquisition for Bragg coherent diffraction imaging, i.e., where the sample is in continuous motion. The fidelity of continuous scanning Bragg coherent diffraction imaging is demonstrated on a single Pt nanoparticle in a flow reactor at 400∘C in an Ar-based gas flowed at 50 ml/min. We show a reduction of 30\% in total scan time compared to conventional step-by-step scanning. The reconstructed Bragg electron density, phase, displacement and strain fields are in excellent agreement with the results obtained from conventional step-by-step scanning. Continuous scanning will allow to minimise sample instability under the beam and will become increasingly important at diffraction-limited storage ring light sources.},
-annote = {Continuous scanning --> We show a reduction of 30\% in total scan time compared to conventional step‑by‑step scanning.},
+abstract = {We explore the use of continuous scanning during data acquisition for Bragg coherent diffraction imaging, i.e., where the sample is in continuous motion. The fidelity of continuous scanning Bragg coherent diffraction imaging is demonstrated on a single Pt nanoparticle in a flow reactor at 400∘C in an Ar-based gas flowed at 50ml/min. We show a reduction of 30\% in total scan time compared to conventional step-by-step scanning. The reconstructed Bragg electron density, phase, displacement and strain fields are in excellent agreement with the results obtained from conventional step-by-step scanning. Continuous scanning will allow to minimise sample instability under the beam and will become increasingly important at diffraction-limited storage ring light sources.},
 author = {Li, Ni and Dupraz, Maxime and Wu, Longfei and Leake, Steven J. and Resta, Andrea and Carnis, J{\'{e}}r{\^{o}}me and Labat, St{\'{e}}phane and Almog, Ehud and Rabkin, Eugen and Favre-Nicolin, Vincent and Picca, Fr{\'{e}}d{\'{e}}ric Emmanuel and Berenguer, Felisa and van de Poll, Rim and Hofmann, Jan P. and Vlad, Alina and Thomas, Olivier and Garreau, Yves and Coati, Alessandro and Richard, Marie Ingrid},
 doi = {10.1038/s41598-020-69678-5},
-file = {:home/david/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Li et al. - 2020 - Continuous scanning for Bragg coherent X-ray imaging.pdf:pdf},
 isbn = {0123456789},
 issn = {20452322},
 journal = {Scientific Reports},
@@ -3802,6 +4032,22 @@ issn={1932-7447},
 doi={10.1021/acs.jpcc.5b06070},
 }
 
+
+
+@Article{Hammer2006,
+author={Hammer, B.},
+title={Special Sites at Noble and Late Transition Metal Catalysts},
+journal={Topics in Catalysis},
+year={2006},
+month={03},
+day={01},
+volume={37},
+number={1},
+pages={3-16},
+abstract={An overview of recent advancements in density functional theory modeling of particularly reactive sites at noble and late transition metal surfaces is given. Such special sites include sites at the flat surfaces of thin metal films, sites at stepped surfaces, sites at the metal/oxide interface boundary for oxide-supported metal clusters, and sites at the perimeter of oxide islands grown on metal surfaces. The Newns--Anderson model of the electronic interaction underlying chemisorption is described. This provides the grounds for introducing the Hammer--N{\o}rskov d-band model that correlates changes in the energy center of the valence d-band density of states at the surface sites with their ability to form chemisorption bonds. A reactivity change described by this model is characterized as an electronic structure effect. Br{\o}nsted plots of energy barriers versus reaction energies are discussed from the surface reaction perspective and are used to analyze the trends in the calculated changes. Deviations in the relation between energy barriers and reaction energies in Br{\o}nsted plots are identified as due to atomic structure effects. The reactivity change from pure Pd surfaces to Pd thin films supported on MgO can be assigned to an electronic effect. Likewise for the reactivity change from flat Au surfaces, over Au thin films to Au edges and the Au/MgO interface boundary. The reactivity enhancement at atomic step sites is of both electronic and atomic structure nature for NO dissociation at Ru, Rh and Pd surfaces. The enhancement of the CO oxidation reactivity when moving from a CO+O coadsorption structure on Pt(111) to the PtO2 oxide island edges supported by Pt(111) is, however, identified as mainly an atomic structure effect. As such, it is linked to the occurrence of favorable pathways at the oxide island edges and is occurring despite of stronger adsorbate binding of the oxygen within the oxide edge, i.e. despite of an opposing electronic effect. As a final topic, a discussion is given of the accuracy of density functional theory in conjunction with surface reactions; adsorption, desorption, diffusion, and dissociation. Energy barriers are concluded to be more robust with respect to changes in the exchange-correlation functional than are molecular bond and adsorption energies.},
+issn={1572-9028},
+doi={10.1007/s11244-006-0004-y},
+}
 
 @Article{Hammer1995,
 author={Hammer, B. and Norskov, J. K.},
@@ -8595,7 +8841,6 @@ keywords = {data post-processing, elemental mapping, space-resolved XAS, XRF ima
    month = 11,
    year = {2017},
    pages = {6696--6701},
-   file = {Dupraz et al. - 2017 - 3D Imaging of a Dislocation Loop at the Onset of P.pdf:/Users/marieingridrichard/Zotero/storage/JC8FDC8C/Dupraz et al. - 2017 - 3D Imaging of a Dislocation Loop at the Onset of P.pdf:application/pdf}
 }
 
 @article{van_heel_fourier_2005,
