--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -15,19 +15,18 @@ SOLEIL (Source Optimisée d’Énergie Intermédiaire du LURE (Laboratoire pour 
     \label{fig:SOLEIL}
 \end{figure}
 
-Synchrotron radiation is generated when electrons are accelerated to relativistic speeds and forced to travel in curved trajectories by strong magnetic fields supplied by "bending magnets".
-As these high-energy electrons move along their circular paths, they emit electromagnetic radiation, known as synchrotron radiation.
-This radiation spans a broad spectrum, from infrared to X-rays, depending on the energy of the accelerated particles and the strength of the magnetic fields.
+Synchrotron radiation is generated when electrons traveling at relativistic speeds are accelerated and forced to travel in curved trajectories by strong magnetic fields supplied by \textit{bending magnets}.
+The radiation spans a broad spectrum, from infrared to X-rays, depending on the electrons, the acceleration, and the strength of the magnetic fields.
 
 First, electrons are produced by an electron gun and accelerated in a linear accelerator (LINAC), then by a booster ring.
-Secondly, once the electrons reach the desired energy, they are injected into a storage ring, which is a circular vacuum chamber surrounded by strong magnets.
-The magnetic fields in the ring act as a guiding force, bending the electrons' trajectories into circular paths (fig. \ref{fig:SOLEIL} - left).
+Secondly, once the electrons reach the desired energy, they are injected into a storage ring, which is an almost circular vacuum chamber (fig. \ref{fig:SOLEIL} - left) surrounded by strong magnets.
+The magnetic fields in the ring act as a guiding force, bending the electrons' trajectories.
 
 Due to their high energy, the electrons travel at speeds close to the speed of light, making them relativistic particles.
 As they move through the curved paths, they are accelerated and emit electromagnetic radiation tangentially to their trajectory as a result \parencite{Willmott, NielsenMcMorrow}.
 
-By the use of insertion devices such as wiggler or undulators, synchrotron radiation is exceptionally bright and brilliant, with a high flux of photons and an excellent collimation, wigglers are best used when in the need of a broad energy range, whereas undulators produce beams with extremely high brilliance and narrow bandwidth.
-Each beamline at SOLEIL begins with one of those insertion devices (fig. \ref{fig:SOLEIL} - right).
+By the use of insertion devices such as \textit{wiggler} or \textit{undulators}, synchrotron radiation is exceptionally bright and brilliant, with a high flux of photons and an excellent collimation, wigglers are best used when in the need of a broad energy range, whereas undulators produce beams with extremely high brilliance and narrow bandwidth.
+Each beamline at SOLEIL begins with one of those insertion devices or with a bending magnet (fig. \ref{fig:SOLEIL} - right).
 
 \subsection{The SixS beamline}
 
@@ -44,14 +43,15 @@ SixS (Surfaces Interfaces X-ray Scattering) is a wide-energy range beamline dedi
 \end{figure}
 
 The beamline operates with a $U_{20}$ undulator situated before the front-end (shutter) which delivers a horizontally polarized beam characterized by its horizontal and vertical full-width at half maximum (FWHM), respectively $\sigma_H = \qty{913.7}{\um}$ and $\sigma_V = \qty{19.1}{\um}$, and by its horizontal and vertical divergences, respectively $\Delta\theta_H = \qty{14.5}{\micro\radian}$ and $\Delta\theta_V = \qty{4.61}{\micro\radian}$.
-The beam is originally much more focused in the vertical direction.
 
 An absorber and diaphragm are placed after the undulator to cut any parasitic signal from the source, a double crystal monochromator (DCM) of silicium (111) allows the selection of a monochromatic beam of thin bandwidth $\Delta \lambda$ in the range of \qtyrange{4}{20}{\keV} after receiving the white beam.
-The first crystal is cooled by liquid nitrogen due to the high intensity of the white beam and produces harmonics depending on the incident angle of the beam through diffraction (Bragg's law, eq. \ref{eq:Bragglaw}), only the first harmonic is selected with the second crystal.
+The crystals are cooled by liquid nitrogen due to the high intensity of the white beam and produce harmonics depending on the incident angle of the beam through diffraction (Bragg's law, eq. \ref{eq:Bragglaw}), only the first harmonic is selected with the second crystal.
 Primary slits are placed just before the DCM, to select a homogeneous portion of the beam to work with to avoid fluctuations in the beam intensity.
-Secondary slits are placed just after the DCM to clean the signal after the monochromator, the vertical focus of the beam is then handled by a pair of mirrors, one of which is slightly curved.
-After the focusing mirrors are the attenuators that limit the intensity of the incident beam (\textit{e.g.} when working in the direct geometry), followed by the first experimental end-station, the multi-environment diffractometer, where the focused beam is approximately large by \qty{60}{\um} vertically and \qty{1500}{\um} horizontally.
-The distance between each element is recapitulated in tab. \ref{tab:DistanceSixS} and a sketch of the beamline is illustrated in fig. \ref{fig:SixSBeamline}.
+Secondary slits after the DCM are used to clean the signal after the monochromator, the vertical focus of the beam is then handled by a pair of mirrors, one of which can be slightly curved to focus anywhere between the MED and the UHV stations (fig. \ref{fig:SixSBeamline}).
+Piezo-actuated and pneumatic attenuators are respectively situated before and after the mirrors, they limit the intensity of the incident beam (\textit{e.g.} when working in the direct geometry).
+The first experimental end-station on the beam path is the multi-environment diffractometer, where the focused beam is approximately large by \qty{60}{\um} vertically and \qty{1500}{\um} horizontally.
+Additional focusing optics used for BCDI are present in the MED end-station and are detailed below.
+The distance between each element on the beamline is recapitulated in tab. \ref{tab:DistanceSixS}, a sketch of the beamline is illustrated in fig. \ref{fig:SixSBeamline}.
 The second experimental hutch, mainly used for ultra-high vacuum experiments, was not used in the frame of this thesis.
 
 \begin{table}[!htb]
@@ -71,25 +71,39 @@ The second experimental hutch, mainly used for ultra-high vacuum experiments, wa
     \label{tab:DistanceSixS}
 \end{table}
 
-\subsection{Multi environment diffractometer}
+\subsection{Multi environment diffractometer}\label{sec:MED}
 
-The multi-environment diffractometer (MED) end-station at SixS can be used in either a vertical or horizontal configuration, and can accomodate a large variety of experimental chambers around the sample stage.
+The multi-environment diffractometer (MED) (fig. \ref{fig:MEDDiffractometer}) at SixS can be used in either a vertical or horizontal configuration (fig. \ref{fig:Diffractometer}), and can accomodate a large variety of experimental chambers around the sample stage.
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[trim=100 225 100 275, clip, width=0.9\textwidth]{/home/david/Documents/PhD/Figures/sixs/Diffractometer.pdf}
+    \caption{
+        Multi-environment diffractometer (MED), here in the horizontal configuration, accomodating the XCAT reactor \parencite{VanRijn2010}.
+        The XCAT reactor is placed upon a hexapod which allows the sample to move in three orthonormal directions.\\
+        Image copyright by Leiden Probe Microscopy (\url{https://leidenprobemicroscopy.com}).
+    }
+    \label{fig:MEDDiffractometer}
+\end{figure}
 
 Situated at a distance $R = \qty{31}{\m}$ from the source, we can compute the transverse coherence length of the beam at the sample stage when working with an energy of \qty{8.5}{\keV} following eq. \ref{eq:TransverseCoL}.
 For a Gaussian distribution, the FWHM is related to the standard deviation $\sigma$ by the relation $FWHM = 2\sqrt{2 ln (2) } \sigma$.
 We obtain for the transverse coherent lengths $L_{T,H} = \qty{3.3}{\um}$, and $L_{T,V} = \qty{157.3}{\um}$.
-TO DO DOUBLE CHECK VALUES
 
-The longitudinal coherence length can be computed from eq. \ref{eq:LongitudinalCoL}, the ratio $\lambda/\Delta\lambda$ approximately equal to \qty{e-4}{\keV} at the energy of \qty{8.5}{\keV} gives $L_L = \qty{729}{\nm}$.
-These values corresponds to perfect coherent lengths without taking into account any imperfection in the beamline elements (monochromator, focusing mirrors) that can result in increasing the virtual source size and decreasing the transverse coherence lengths \parencite{vincentjacques2010}.
+The longitudinal coherence length can be computed from eq. \ref{eq:LongitudinalCoL}, the ratio $\Delta\lambda/\lambda$ approximately equal to \qty{e-4}{\keV} at the energy of \qty{8.5}{\keV} gives $L_L = \qty{729}{\nm}$.
+These values corresponds to perfect coherent lengths without taking into account any imperfection in the beamline elements (such as the monochromator) that can result in increasing the virtual source size and decreasing the transverse coherence lengths \parencite{vincentjacques2010}.
 
-When in a SXRD experimental configuration, the beam is focused with the mirrors.
-However, when in a BCDI experimental configuration, the mirrors are removed from the optical path since the focus of the beam is handled by specific focusing optics.
-The secondary slits, which are wide open during surface x-ray diffraction experiment, are closed to \qty{100}{\um} vertically and horizontally, acting as a secondary source during Bragg coherent diffraction imaging experiments and reducing the effective size of the source seen by the focusing optics.
+\subsubsection{BCDI configuration}
 
-Finally, so called \textit{coherence} slits are placed just before the sample to select a more fine homogeneous portion of the beam that will impinge on focusing refractive lenses called Fresnel zone plates (FZP).
-The use of Fresnel zone plates, that preserve the coherent wavefront, together with coherence slits has been proven to increase the coherent flux \parencite{Schroer2008, diaz_coherent_2009, Mastropietro2011}.
-They are used together with an order-sorting aperture (OSA) and a beamstop that block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
+During this thesis, the horizontal configuration was used for SXRD experiments whereas the vertical configuration was used for BCDI experiments.
+Working in a vertical configuration is preferable for BCDI since it allows a larger range of incident angle ($\beta$, the incident angle in the horizontal configuration, is limited to \ang{3}).
+The mirrors, that focus the beam in the horizontal configuration, are removed from the optical path, the focus of the beam is then handled by specific focusing optics.
+
+The secondary slits, which are wide open during surface x-ray diffraction experiment, are closed to \qty{100}{\um} vertically and horizontally, acting as a secondary source during Bragg coherent diffraction imaging experiments, reducing the effective size of the source seen by the focusing optics \parencite{vincentjacques2010}.
+So called \textit{coherence} slits are placed just before the beam stop and the Fresnel zone plate to select a more fine homogeneous portion of the beam that will impinge on focusing refractive lenses called Fresnel zone plates (FZP).
+The use of Fresnel zone plates, that preserve the coherent wavefront, together with coherence slits has been proven to increase the coherent flux impinging on the sample \parencite{Schroer2008, diaz_coherent_2009, Mastropietro2011}.
+
+An order-sorting aperture (OSA) and a beamstop block the direct beam and the higher diffraction orders from the FZP (fig. \ref{fig:OpticalSetup}).
 Since the coherence slits also have the counter effect of decreasing the total photon flux on the sample, their width is subject to a compromise to increase the coherent flux on the sample.
 
 \begin{figure}[!htb]
@@ -97,16 +111,18 @@ Since the coherence slits also have the counter effect of decreasing the total p
     \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/OpticalSetup.png}
     \caption{
     	Focusing optics used for Bragg coherent diffraction imaging at the MED end-station, increasing the coherent flux on the sample.
-        $f$ stands for focal distance and $\lambda$ is the wavelength of the incoming beam. (REMOVE l ?)
+        $f$ stands for focal distance and $\lambda$ is the wavelength of the incoming beam.
     }
     \label{fig:OpticalSetup}
 \end{figure}
 
 \begin{table}[!htb]
     \centering
-	\begin{tabular}{l|l|l|l|l}
-	     & Beam stop & FZP & OSA & Beam\\ \hfill
-	    Diameter & \qty{80}{\um} & \qty{300}{\um} & \qty{70}{\um} & \qty{\approx 1}{\um}\\
+	\begin{tabular}{l|l|l|l|l|l}
+	    & Coherence slits & Beam stop & FZP & OSA & Beam \\
+        \toprule
+	    Diameter & \qtyproduct{60 x 20}{\um} & \qty{80}{\um} & \qty{300}{\um} & \qty{70}{\um} & \qty{\approx 1}{\um}\\
+        Sample distance & \qty{-400}{\mm} & \qty{-220}{\mm} & \qty{-200}{\mm} & \qty{-50}{\mm} & \qty{0}{\mm} \\
 	\end{tabular}
 	\caption{
 	Diameter of the coherence focusing optics used to increase the coherent flux on the sample.
@@ -116,42 +132,35 @@ Since the coherence slits also have the counter effect of decreasing the total p
 
 \subsection{Catalysis reactor}
 
-A catalysis reactor is mounted on the sample stage of the MED for the study of catalytic reactions, a 3D view in the horizontal configuration with the high pressure surface diffraction reactor XCAT (X-ray CATalysis) set on the goniometer is illustrated in fig. \ref{fig:MEDDiffractometer}.
+A catalysis reactor is mounted on the sample stage of the MED for the study of catalytic reactions.
+A 3D view in the horizontal configuration with the high pressure surface diffraction reactor XCAT (X-ray CATalysis) set on the goniometer is illustrated in fig. \ref{fig:MEDDiffractometer}.
 
-\begin{figure}[!htb]
-    \centering
-    \includegraphics[trim=100 225 100 275, clip, width=0.9\textwidth]{/home/david/Documents/PhD/Figures/sixs/Diffractometer.pdf}
-    \caption{
-    	Diffractometer used at SixS at the multi-environment diffractometer (MED) in the horizontal configuration, accomodating the XCAT reactor \parencite{VanRijn2010}.
-    	Copyright by Leiden Probe Microscopy (\url{https://leidenprobemicroscopy.com}).
-    }
-    \label{fig:MEDDiffractometer}
-\end{figure}
-
-This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a} at ambient pressure with surface x-ray diffraction and includes an ion gun for the cleaning of the surface by sputtering.
-Sputtering is a process in which atoms or ions from a solid target material are ejected or "sputtered" from the surface of the target due to the impact of high-energy particles.
-The samples are prepared \textit{ex-situ}, introduced in the reactor and cleaned by sputtering before the experiment.
-It is also possible to heat the sample up to \qty{900}{\degreeCelsius} (at low pressures) for an extended period of time to anneal the sample after sputtering.
+This reactor is used for the study of heterogeneous catalysis \parencite{VanRijn2010, Resta2020a}, and couples a UHV environment for classical surface science preparations (sputtering, annealing, evaporations) with an ambient pressure reactor.
+%Sputtering is a process in which atoms or ions from a solid target material are ejected or "sputtered" from the surface of the target due to the impact of high-energy particles.
+In the frame of this thesis, the metallic single crystal are purchased already cut and polished for SXRD experiments, introduced in the reactor and cleaned by sputtering \parencite{Taglauer1990} before the experiment.
+It is also possible to heat the sample up to \qty{900}{\degreeCelsius} (at low pressures) for an extended period of time (sec \ref{sec:SXRD100} - \ref{sec:SXRD111}) to anneal the sample after sputtering \parencite{MUSKET1982143}.
 
 \begin{figure}[!htb]
     \centering
     \includegraphics[trim=10 325 350 64, clip, width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/SampleHolder.pdf}
     \caption{
         Sample holder used for the XCAT catalysis reactor.
-        The V-seal seals the reactor atmosphere from the outside when the reactor dome is fixed.
-        TRY TO FIX WORDS, MAYBE TICKZ ?
+        A Berylium or PEEK dome (not shown) closes the reactor, the V-seal sealing the reactor atmosphere from the outside.
+        \textcolor{Important}{TRY TO FIX WORDS, MAYBE TICKZ ?, add ceramic}
     }
     \label{fig:SampleHolder}
 \end{figure}
 
-The sample holder (fig. \ref{fig:SampleHolder}) consists of a graphite heating element covered in boron nitride fixed by two conductive screws used to control the heater power circuit, in a thick (\qty{\approx 1}{\cm}) and round PEEK slab.
-The protruding ends of the screws on the opposite side of the PEEK slab serve as contact pins.
-These pins securely fasten the sample holder to the reactor by engaging with snug contact sockets.
+The sample holder (fig. \ref{fig:SampleHolder}) consists of a cross-shaped graphite heater covered in boron nitride held by two conductive screws in a thick (\qty{\approx 1}{\cm}) and round ceramic slab.
+The protruding ends of the screws on the opposite side of the ceramic slab serve as contact pins used for the heater power circuit, and to securely fasten the sample holder to the reactor.
+
 This design not only enables swift attachment and detachment of the sample holder but also ensures a robust setup in both horizontal and vertical orientations.
 The sample is then placed on top of the sample holder and set in place by a wire.
-All the materials used in the reactor were carefully chosen as not catalytically active.
-For example, tantalum parts (screws and wire) are used in the case of catalytic reaction, whereas molybdenum parts are used when specifically probing hydrogenation reactions, a boron nitride paste additionally covers the screws and wires used to fix the sample holder and the sample.
-The temperature of the sample is controlled by a type C thermocouple.
+All the materials used in the reactor were carefully chosen as not catalytically active for specific reactions.
+For example, tantalum (Ta) parts (screws and wire) are used in oxygen rich envronment since Ta is more resilient than molybdenum (Mo) to oxidation reaction, whereas Mo parts are used in hydrogen rich environment because it is more resilient to hydrides formation.
+\textcolor{Important}{find ref otherwise}
+A boron nitride paint additionally covers and protects the screws and wires used to fix the sample holder and the sample from oxidation effects.
+The heater power is adjusted as a function of the sample temperature read by a type C thermocouple.
 
 \begin{figure}[!htb]
     \centering
@@ -166,7 +175,7 @@ The temperature of the sample is controlled by a type C thermocouple.
 \end{figure}
 
 The gas composition inside the reactor is tuned by setting the flow for each gas in standard cubic centimeters per minute (SCCM).
-The inlet and outlet of the gases in the reactor volume are through holes in the PEEK slab that are set just below the sample holder.
+The inlet and outlet of the gases in the reactor volume are through holes in the ceramic slab that are set just below the sample holder.
 The standard supported gases are argon (\argon), oxygen (\dioxygen), nitrogen oxide (\nitricoxide), carbon monoxide (\ce{CO}) and hydrogen (\ce{H_2}).
 It is possible to change the gases used by computing the correct conversion factor for a mass flow controller, each one originally set to work with a specific gas.
 For example, the bottle of \ce{H_2} was replaced by a bottle of ammonia (\ammonia) during the experiments involving the catalytic oxidation of ammonia.
@@ -190,8 +199,8 @@ Overall, this experimental setup allows the exploration of a large, multi-diment
 \end{figure}
 
 When performing BCDI measurements, a smaller version of the XCAT is used which is light enough to be supported vertically by the goniometer (fig \ref{fig:MEDV}).
-The volume in the reactor is the same.
-Moreover, the same sample holder can be used which carries the graphite heater, the only setback being the lack of sputtering gun and the impossibility to study catalytic reaction in batch mode (as opposite to flow mode).
+The two reactor have the same inner volume and host the same sample holder stage (fig \ref{fig:SampleHolder}).
+The main setbacks being the lack of sputtering gun and the impossibility to study catalytic reaction in batch mode (as opposite to flow mode) due to the design of the small reactor (the leak to the RGA is after the pressure controller in the small reactor).
 
 The measurement process for the collection of the scattered intensity is detailed in sec. \ref{sec:DataCollectionSXRD} for surface x-ray diffraction and in sec. \ref{sec:DataCollectionBCDI} for Bragg coherent diffraction imaging.
 Since this reactor was designed for SXRD together with a 6-circle diffractometer, the entire surface of the sample is accessible during the experiment which allows the full access to the reciprocal space to probe any particular symmetry, limited only by the extent of the Ewald sphere (\textit{i.e.} a maximum extent in $\vec{q}$).
@@ -201,6 +210,6 @@ On one hand, the MERLIN \parencite{BEWLEY20061029} combines a small pixel size (
 For example, the pixel size is of main importance when computing the oversampling requirements (sec. \ref{sec:PhaseRetrieval}).
 
 On the other hand, the XPAD detector \parencite{Basolo2005, Dawiec_2016} is used for surface x-ray diffraction experiments, its pixel size is equal to \qty{130}{\um}.
-Different chips can be used that change the array size, respectively (\numproduct{540 x 130}) for the XPAD70 and (\numproduct{540 x 260}) for the XPAD140.
-The area covered by the detector is larger than with the MERLIN, but the main advantages of the XPAD are its high dynamic range and highly programmable interface \parencite{Fertey2013} which can be programmed to work with automatic attenuators, crucial in SXRD when navigating between bulk and surface scattered signals .
+Different detectors can be used that change the array size, respectively (\numproduct{540 x 130}) for the XPAD70 and (\numproduct{540 x 260}) for the XPAD140.
+The area covered by the detector is larger than with the MERLIN, but the main advantages of the XPAD are its high dynamic range and highly programmable interface \parencite{Fertey2013} which can be programmed to work with automatic attenuators \parencite{Dawiec_2016}, crucial in SXRD when navigating between bulk and surface scattered signals .
 The XPAD detector is usually set with its largest side along $\vec{c}$ to collect the highest range in $l$ during the measurements.
