--- a/Sections/2_Theory_Models/X-ray_interaction_matter.tex
+++ b/Sections/2_Theory_Models/X-ray_interaction_matter.tex
@@ -3,26 +3,29 @@
 Understanding the different mechanisms at play when photons interact with matter is of crucial importance to be able to decide how to use x-rays as a probe in material science.
 Each phenomenon is at the source of different techniques (tab. \ref{tab:techniques} - fig. \ref{fig:TechniquesDataExamples}), scattering brings surface x-ray diffraction (SXRD) and Bragg coherent diffraction imaging (BCDI), two techniques used in the frame of this thesis that give complementary information about the sample structure bulk and surface.
 
-X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the source of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
+X-ray absorption together with the photoelectric effect explained by Einstein in \cite*{Einstein1905} are at the origin of a third technique used, x-ray photoelectron spectroscopy, which yields information specific to the nature of the adsorbates on the sample's surface.
 
 \begin{table}[!htb]
-    \centering
-    \small
-    \begin{tabular}{l|l|l|l}
-        Technique & Sample & Sensitivity & Information \\
+\centering
+\resizebox{\textwidth}{!}{%
+    \begin{tabular}{l|l|l|l|l}
+        Phenomena & Technique & Sample & Information \\
         \toprule
-        Bragg Coherent & Pt nanoparticles & Bragg electronic & Shape, 3D strain  \\
-        Diffraction Imaging & (111), (110), (100), ... & density and phase & and displacement \\
-        (BCDI) &  &  & \\
+        Scattering & Bragg Coherent & Pt nanoparticles & Shape, 3D strain \\
+        & Diffraction Imaging & (111), (110), (100), ... & and displacement \\
+        & (BCDI) & & \\
         \midrule
-        Surface x-ray & Pt single crystals & Surface & Roughness, relaxation \\
-        Diffraction (SXRD) & (111), (100), (311) & structure & and crystallographic phases \\
+        Scattering & Surface x-ray & Pt single crystals & Roughness, relaxation \\
+        & Diffraction (SXRD) & (111), (100) & and crystallographic phases \\
         \midrule
-        x-ray Photoelectron & Pt single crystals & Surface & Species presence, \\
-        Spectroscopy (XPS) & (111), (100) & species & quantity, oxidation state \\
+        Absorption & X-ray Photoelectron & Pt single crystals & Species presence, \\
+        & Spectroscopy (XPS) & (111), (100) & quantity, oxidation state \\
         \bottomrule
     \end{tabular}
-    \caption{Near-ambient pressure (NAP) x-ray techniques carried out at the SixS (SOLEIL) \\ or B-07 (Diamond) beamlines}
+    }
+    \caption{
+        X-ray techniques carried out in the frame of this thesis.
+    }
     \label{tab:techniques}
 \end{table}
 
@@ -32,13 +35,13 @@ X-ray absorption together with the photoelectric effect explained by Einstein in
     \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/sxrd_data/Pt100/maps/Map_hkl_surf_or_2227-2283_not_patched.png}
     \includegraphics[height=0.25\textwidth]{/home/david/Documents/PhD/Presentations/Slides/PhdSlides/Figures/xps_data/transition_xps.png}
     \caption{
-    Slice of 3D diffraction pattern collected at the SixS beamline at the SOLEIL synchrotron (left).
-    Reciprocal space map in HK plane collected at the SixS beamline at the SOLEIL synchrotron (middle).
-    Ambient pressure XPS spectra measured during a transition between two atmospheres (\argon and \dioxygen), collected at the B07 beamline at the Diamond synchrotron (right).}
+    Slice of 3D diffraction pattern collected at the SixS beamline at the SOLEIL synchrotron using BCDI (left).
+    Reciprocal space map in HK plane collected at the SixS beamline using SXRD (middle).
+    Ambient pressure XPS spectra measured during a transition between two atmospheres (\argon  and \dioxygen), collected at the B07 beamline at the Diamond synchrotron using XPS (right).}
     \label{fig:TechniquesDataExamples}
 \end{figure}
 
-In this chapter we will discuss the origin of each technique from fundamentals that not only tailor their experimental design but also their operability and sensitivity.
+In this chapter we will discuss the origin of each technique from fundamentals that not only tailor their experimental design but also their operability and the information one can gain from their use (tab \ref{tab:techniques}).
 
 \subsection{Scattering from electrons and atoms}
 
@@ -57,16 +60,15 @@ The conversion between is realized thanks to Planck's constant $h = \qty{6.626e-
 \end{equation}
 
 The properties of the photon and its use in our society depends on its energy and wavelength.
-If visible light is situated between \qty{500}{\eV} and \qty{900}{\eV}, micro-waves used in our everyday life are situated between \qty{e-6}{\eV} and \qty{e-4}{\eV}.
-On the other side of the electromagnetic spectrum, we have higher energy photons such as x-rays (\qtyrange{e2}{e6}{\eV}) and $\gamma$-rays (\qty{>e6}{\eV}).
+For example, visible light is situated between \qty{1.65}{\eV} and \qty{3.26}{\eV}, micro-waves used in our everyday life are situated between \qty{e-6}{\eV} and \qty{e-3}{\eV}.
+On the other side of the electromagnetic spectrum, we have higher energy photons such as x-rays (\qtyrange{e2}{e5}{\eV}) and $\gamma$-rays (\qty{>e5}{\eV}).
 
 X-rays have a wavelength of a few \unit{\angstrom} (\qty{e-10}{\m}) making them the perfect probe to study the structures of materials at the atomic scale thanks to different interactions with matter.
-\textcolor{Important}{Explain why this particular wl is the best}
 
 \subsubsection{Cross-sections}
 
-When an electromagnetic wave interacts with matter it will be attenuated by absorption, reflection or scattering.
-Each process can be quantified depending on the atoms (and thus on the electronic cloud) the beam interacts with and the energy on the incident photon, this is illustrated in figure \ref{fig:cross_sections}.
+When electromagnetic wave interacts with matter it will be attenuated by absorption, reflection or scattering.
+Each process can be quantified depending on the atoms (and thus on the electronic cloud and nucleus) the beam interacts with and the energy on the incident photon, this is illustrated in figure \ref{fig:cross_sections}.
 The cross-section for a particuliar process $p$ is defined as follows \parencite{Willmott}:
 
 \begin{equation}
@@ -87,7 +89,7 @@ This results in a lower energy for the scattered photon (and therefore a higher 
 %This effect has a low cross-section compared to the two other processes and is therefore not taken account during the experiments.
 
 In the frame of this thesis, the (elastic) Thomson scattering cross-sections is the most important, at the origin of x-ray diffraction.
-This process is dominant for energies below \qty{200}{\keV}, together with photoelectric absorption.% for which the K, L and M edges are shown.
+This process is dominant for energies below \qty{200}{\keV}, in the x-ray regime,  together with photoelectric absorption.% for which the K, L and M edges are shown.
 
 \subsubsection{Scattering from an electron}
 
@@ -197,7 +199,8 @@ It decreases with $\vec{q}$ (or $\sin(\theta) / \lambda)$ as illustrated in figu
 \end{equation}
 
 The scattering intensity is equal to the square of the scattering amplitude.
-For example, the scattering intensity of palladium atoms at $|\vec{q}| \qty{\approx 2.75}{\angstrom^{-1}}$ is only \qty{\approx 31}{\percent} of that of platinum atoms. In the case of oxygen, the intensity falls down to \qty{\approx 6.7}{\percent}.
+For example, the scattering intensity of palladium atoms (Z=46) at $|\vec{q}| \qty{\approx 2.75}{\angstrom^{-1}}$ is only \qty{\approx 31}{\percent} of that of platinum atoms (Z=78).
+In the case of oxygen (Z=8), the intensity falls down to \qty{\approx 6.7}{\percent}.
 This difference in scattering intensity between elements becomes crucial when working with small objects that have a small scattering volume such as nanoparticles.
 
 \begin{figure}[!htb]
@@ -224,7 +227,7 @@ The atomic form factor $f^0(\vec{q})$ must therefore be corrected by these two c
 \end{equation}
 
 The values of the correction factors $f'$ and $f''$, also known as the dispersion corrections to $f^0$, depend on the electronic structure of the atom and are maximum when approaching the binding energies of the electrons in the atom.
-To understand the impact of the correction factors on the electromagnetic wave inside a material, we introduce the complex refraction index $n$, which for x-rays can be written as:
+To understand the impact of the correction factors on the electromagnetic wave inside a material, we introduce the complex refraction index $n$, which for x-rays can be written as \parencite{NielsenMcMorrow}:
 
 \begin{gather}
     n = 1-\delta+i\beta = 1 - \frac{r_0 \lambda^2}{2\pi} \sum_i N_i f_i(\vec{q}=0)\\
@@ -237,7 +240,7 @@ $\delta$ is the refractive index and $\beta$ the absorption index.
 
 During simple experiments, when x-rays impinge on a plane surface between air ($n$=1) and another medium of refractive index $n$, x-rays are refracted, the wavelength changes to $\lambda/n$ and the direction of propagation becomes closer to the surface between both mediums.
 Below a certain incident angle known as the \textit{critical angle} $\alpha_c$ between the direction of the incident x-rays and the plane interface, the x-rays will be totally reflected.
-This effect is used in focussing mirrors for optics but also in techniques used to probe the surface of materials to obtain information about the surface density since the critical angle is approximately equal to $\sqrt{2\rho}$ \parencite{Willmott}.
+This effect is used in focusing mirrors for optics but also in techniques used to probe the surface of materials to obtain information about the surface density, the critical angle being approximately equal to $\sqrt{2\rho}$ (when working at the same energy) \parencite{Willmott}.
 Moreover, during surface x-ray diffraction, the incoming angle perpendicular to the surface is kept to very low values approaching the critical angle to limit the volume probed by the x-rays to increase the contrast between the amplitude of the x-rays scattered from the latest surface layers in regard to the x-rays scattered from the bulk.
 The penetration depth of the x-rays in the material is detailed is sec. \ref{sec:SXRD}.
 
@@ -280,7 +283,7 @@ In the simplest case the pattern consists of a single atom, for example pure pla
 
 We can define the scattering factor $F_{crystal}$ of the crystal, that describes the amplitude of the scattered waves, by the sum of the atomic scattering factor $f_j(\vec{q})$ of each atom present in the crystal, while the phases between the scattered waves depend on the positions of the atoms $\vec{R}_j$ in the direction that is perpendicular to the scattering vector $\vec{q}$ (eq. \ref{eq:FCrystal1}).
 In other words, each atom can be described as a small volume $d^3\vec{r}$ in the electronic density $\rho(\vec{r})$, and the scattered field by the superposition of the contribution from the electronic cloud surrounding the atoms.
-If the atomic scattering factor is equal to the Fourier transform of the electronic density of a single atom, the structure factor of a crystal can be written as the Fourier transform of the crystal electronic density \parencite{Paganin}.
+The atomic scattering factor is equal to the Fourier transform of the electronic density of a single atom, the structure factor of a crystal can be written as the Fourier transform of the crystal electronic density \parencite{Paganin}.
 %Thus, the total scattering amplitude at $2\theta$ will be equal to the vector sum of the scattering amplitudes in this direction from all volume elements $d^3\vec{r}$ in $\rho(\vec{r})$ taking into account the phases between them.
 
 \begin{equation}
@@ -293,11 +296,15 @@ The Thomson scattering length is left apart for simplicity.
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/Drawing/blender/FCC.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhDScripts/Drawing/blender/FCC.png}
+    \includegraphics[height=4cm]{/home/david/Documents/PhD/Figures/introduction/ptunitcell.pdf}
     \caption{
     Face centered cubic (FCC) lattice of Pt (space group 225).
     Atoms are represented as solid balls and situated on the corners and at the middle of the faces.
-    The lattice parameter at room temperature is $a = \qty{3.9254}{\angstrom}$. Close packed direction is achieved along the diagonal of the lateral faces, the distance between the atoms then becomes is \qty{2.71}{\angstrom}}
+    A more classical representation of the unit cell is also shown on the right in which the size of the atoms corresponds to 60\% of their atomic radius to be able to visualize the positions of each atom.
+    The lattice parameter at room temperature is $a = \qty{3.9242}{\angstrom}$.
+    Close packed direction is achieved along the diagonal of the lateral faces, the distance between the atoms then becomes \qty{2.7748}{\angstrom}.
+    }
     \label{fig:fcc}
 \end{figure}
 
@@ -309,26 +316,7 @@ For a crystals made of $N_{uc}$ unit cells each composed of $N_{atoms,uc}$ we ha
     \label{eq:Fcrystal}
 \end{equation}
 
-% As seen in Equation (\ref{eq:scatt_thomson_scat_length}), the Thomson scattering length is inversely proportional to the mass of the particle, while the scattering cross-section is proportional to the square of the Thomson scattering length.
-% Hence the nucleus contributes less than one part in a million to the scattering amplitude and can be completely ignored.
-% The charge distribution is therefore equal to the electronic density.
-
-% When detecting the scattered field at a point $\vec{R}$, we assume that $\|vec{R}|$ is far greater than the electronic density, this is called the dipole approximation. NOT GOOD Each atom can be considered as a ball of certain radius (see \ref{fcc_lattice}).
-
-% Furthermore, we assume that the source and detector are sufficiently far from the charge distribution so that the incident and scattered x-rays may be represented as plane waves, parallel to each other and perpendicular to the direction of propagation. % also more easily described
-%This is the so-called far-field limit or the fraunhofer region.
-
-% Finally, we assume that the charge distribution is small and that the scattering is weak so that the sample can be treated as a simple "perturbation" to the incident beam resulting in a linear problem \parencite{NielsenMcMorrow} and that the Born approximation is valid.
-
-% Working under these assumption is known as kinematic diffraction for which we can easily derive the intensity of the scattered photons.
-% We therefore ignore multiple-scattering of photons inside the sample and xxx.
-% This is correct when working with low incident angles and penetration depths as for example in surface x-ray diffraction (see Section x).
-
-% only valid in far-field, faunhofer region
-% DWBA
-% dipole approximation
-
-The Bravais lattice is defined by three basis vectors $\vec{a},\ \vec{b},\ \vec{c}$ and three angles $\alpha$ [$\angle (\vec{b}, \vec{c})$] , $\beta$ [$\angle (\vec{a}, \vec{c})$] and $\gamma$ [$\angle (\vec{a}, \vec{b})$].
+The Bravais lattice is defined by three basis vectors $\vec{a},\ \vec{b},\ \vec{c}$ and three angles $\alpha$ [$\angle (\vec{b}, \vec{c})$] , $\beta$ [$\angle (\vec{c}, \vec{a})$] and $\gamma$ [$\angle (\vec{a}, \vec{b})$].
 Any vector $\vec{R_k}$ describing the position of a node in the real space can be created by a linear combination of these three vectors:
 
 \begin{equation}
@@ -377,13 +365,14 @@ The direction perpendicular to the $(hkl)$ plane is written as $[hkl]$, the dist
     \centering
     \includegraphics[scale=0.6]{Figures/introduction/BraggLaw.pdf}
     \caption{
-    The difference in the path length between plane waves scattered at an angle $\theta$ must be an integer multiple of wavelengths for constructive interference to occur. NOT FINISHED
+    The difference in the path length (in red) between plane waves scattered at an angle $\theta$ is equal to $2d_{hkl} \sin{\theta}$.
+    This distance must be an integer multiple of the wavelength for constructive interference to occur.
     }
     \label{fig:BraggLaw}
 \end{figure}
 
 A Bragg peak results from the constructive interference between scattered waves at discrete values of the incident angle $\theta$ on a specific set of crystalline planes.
-From fig. \ref{fig:BraggLaw} we can retrieve the condition to have constructive interference, also known as Bragg's law and given by eq. \eqref{eq:Bragglaw}.
+From fig. \ref{fig:BraggLaw} we can retrieve the condition to have constructive interference, also known as Bragg's law and given by eq. \ref{eq:Bragglaw}.
 
 \begin{equation}
     \label{eq:Bragglaw}
@@ -422,7 +411,7 @@ On one hand, in real space, the crystal electronic density can be formed by repe
 This representation captures the periodicity and arrangement of the crystal.
 
 On the other hand, in reciprocal space (Fourier space), the crystal scattering factor $F_{crystal}$ is the Fourier transform of the electronic density.
-According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions.
+According to the convolution theorem, the Fourier transform of a convolution is equal to the product of the Fourier transforms of the individual functions \parencite{MCALISTER2003629}.
 The scattering factor can therefore be expressed as the product of the Fourier transforms of the lattice and unit cell functions.
 These Fourier transforms are known as the lattice factor $F_{lat}$ and the unit cell structure factor $F_{uc}$.
 
@@ -466,7 +455,7 @@ The position of each atom is defined in the unit cell by eq. \ref{eq:AtomPos}, a
     y    & 0  & 0.5 & 0   & 0.5 & | 0  & 1  & 1  & 1   & 0.5 & 0  & 0  & 1  & 1  & 0.5 \\
     z    & 0  & 0   & 0.5 & 0.5 & | 0  & 0  & 0  & 0.5 & 0.5 & 1  & 1  & 1  & 1  & 1   \\ \bottomrule
     \end{tabular}
-    \caption{Position of platinum atoms in the face-centered cubic (FCC) unit cell. Illustrated in fig. \ref{fig:fcc}. The first four atomic positions  lead to the other positions by symmetry.}
+    \caption{Position of platinum atoms in the face-centered cubic (FCC) unit cell. Illustrated in fig. \ref{fig:fcc}. The first four atomic positions  lead to the other positions by symmetry (space group 225).}
     \label{tab:PtAtoms}
 \end{table}
 
@@ -519,7 +508,7 @@ The brilliance $\mathcal{B}$ is a measure of the distribution of flux in both sp
 
 The spectral flux, on the other hand, quantifies the number of photons passing through a defined area per unit bandwidth per second.
 Synchrotron facilities aim to optimize both the photon flux and brilliance, a higher flux meaning faster experiments whereas a high brilliance is important for those that need a coherent beam.
-To do so, the source size which is the convolution of the size of the photon source and the transverse size of the electron beam has been reduced by an order of magnitude in $4^{th}$ generation synchrotrons compared to $3^{rd}$ generation synchrotrons \parencite{Willmott}.
+In the last evolution from $3^{rd}$ to $4^{th}$ generation synchrotrons, the source size (convolution of the size of the photon source and the transverse size of the electron beam) has been reduced by an order of magnitude \parencite{Willmott}.
 
 \begin{equation}
     \label{eq:Emittance}
@@ -529,7 +518,7 @@ The emittance $\epsilon$ is defined as the product of the source size $D$ and th
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[scale=0.9]{Figures/introduction/coherence_lengths.pdf}
+    \includegraphics[scale=0.8]{Figures/introduction/coherence_lengths.pdf}
     \caption{
     (a) Two waves become out of phase in the direction of the beam at a distance $L_L$ from being in phase after $N/2$ wavelengths for $\lambda$ and $(N+1)/2$ wavelengths for $\lambda - \Delta\lambda$. Since $N >> 1$, we can write $N\approx\lambda/\Delta\lambda$ and find eq. \ref{eq:LongitudinalCoL}.
     (b) A plane wave emitted from one extremity of the source is out of phase with another plane wave emitted from the other extremity with maximum angular divergence $\Delta\theta$ at a distance $L_T$ in the plane perpendicular to the direction of the beam situated at a distance $R$ from the source.
@@ -556,10 +545,10 @@ By assuming that the source has a Gaussian profile, we can relate $D$ to the sta
 At synchrotrons, the vertical and horizontal source sizes are significantly different due to the shape of the electron beam, much more extended in the horizontal plane.
 The horizontal transverse coherence length is usually smaller and the limiting factor.
 By multiplying the two transverse coherence lengths $L_{T,H}$, $L_{T,V}$ and the longitudinal coherence length $L_L$ we obtain the coherent volume.
-An example if given in sec. \ref{sec:SIXS} for the SixS beamline of the synchrotron SOLEIL.
+An example is given in sec. \ref{sec:SIXS} for the SixS beamline of the synchrotron SOLEIL.
 
 To perform Bragg coherent diffraction imaging experiments for which the coherent volume must be larger than the sample, the beamline must have low vertical and horizontal emittances, high monochromaticity and a sample environment situated as far as possible from the source.
-Moreover, the coherent flux $F_{coh}$ as a function of the wavelength is directly related to the brilliance and bandwidth of the source \parencite{Willmott}:
+Therefore, the coherent flux $F_{coh}$ as a function of the wavelength is directly related to the brilliance and bandwidth of the source \parencite{Willmott}:
 
 \begin{equation}
     \label{eq:CoherentFlux}
@@ -571,12 +560,14 @@ A detailed explanation of how to optimize BCDI experiments is given in sec. \ref
 
 \textit{
 So far we have limited ourselves to the kinematical approach of diffraction in the frame of this thesis which means that the scattering is considered weak enough so that multiple scattering can be ignored.
-This allows us to assume that the sample is only a perturbation to the incident field and that the structure factor can be written as the Fourier transform of the electronic density (Born approxiamtion).
-We have also assumed that the incident wave is plane within the scattering volume and that the distance between the scatterer and the detector is large enough for the scattered waves to be considered planes.
+This allows us to assume that the sample is only a perturbation to the incident field and that the structure factor can be written as the Fourier transform of the electronic density (Born approximation).
+We have also assumed that the incident wave is plane within the scattering volume and that the distance between the scatterer and the detector is large enough for the scattered waves to be considered planes (far-field or Fraunhofer regime).
 }
 
 \textcolor{Important}{
 Field / amplitude / intensity consistent ?
 $r_0$ use consistent ? $2\pi$ ?
-hypothesis to explain: DWBA, dipole, perfect crystals
+hypothesis to explain: DWBA, dipole approximation, perfect crystals
 }
+
+% When detecting the scattered field at a point $\vec{R}$, we assume that $\|vec{R}|$ is far greater than the electronic density, this is called the dipole approximation. NOT GOOD Each atom can be considered as a ball of certain radius (see \ref{fcc_lattice}).
